[package]
name = "gust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1.89"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
croner = "2"
log = "0.4.32"
oci-client = "0.16"
oci-wasm = "0.4.0"
parking_lot = "0.12.5"
petgraph = "0.6"
rust-embed-for-web = "11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0"
sha2 = "0.10.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
wasmtime = { version = "45", features = ["component-model", "async"] }
wasmtime-wasi = "45"

[profile.release]
opt-level = 3
