[package]
name = "gust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1", default-features = false }
async-trait = { version = "0.1.89", default-features = false }
axum = { version = "0.8", default-features = false, features = [
    "macros",
    "json",
    "tokio",
    "http1",
] }
base64 = { version = "0.22.1", default-features = false }
bytes = { version = "1", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
log = { version = "0.4.32", default-features = false }
moka = { version = "0.12.15", default-features = false, features = ["sync"] }
oci-client = { version = "0.16", default-features = false, features = ["rustls-tls"] }
oci-wasm = { version = "0.4.0", default-features = false }
parking_lot = { version = "0.12.5", default-features = false }
petgraph = { version = "0.6", default-features = false }
rust-embed-for-web = { version = "11", default-features = false }
semver = { version = "1.0.28", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
serde_yaml = { version = "0.9.34", default-features = false }
sha2 = { version = "0.10.0", default-features = false }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "macros",
] }
tokio = { version = "1", default-features = false, features = ["full"] }
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
tower-http = { version = "0.6", default-features = false, features = ["cors", "trace"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
uuid = { version = "1", default-features = false, features = ["v4", "serde"] }
wasmtime = { version = "45", default-features = false, features = [
    "anyhow",
    "async",
    "component-model",
    "cranelift",
    "pooling-allocator",
] }
wasmtime-wasi = { version = "45", default-features = false }
wasmtime-wasi-http = { version = "45", default-features = false, features = ["default-send-request", "p2"] }

[profile.release]
opt-level = 3
